<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_compass</name>
  <version>0.1.0</version>
  <description>
    Fuses IMU orientation with GPS-derived heading to publish a calibrated
    compass heading. Publishes to /{robot_name}/compass (string) and
    /{robot_name}/compass/heading (float64, degrees).
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>gps_speed</depend>
  <exec_depend>petaar26</exec_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
